// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FullBlockRow render renders the raw contents of the block 1`] = `
<tr
  onClick={[MockFunction]}
>
  <td
    colSpan={3}
  >
    <RawBlockView
      block={
        Object {
          "id": "asdfasdf",
          "timestamp": "2020-02-08T20:20:20Z",
          "transactions": Array [],
        }
      }
    />
  </td>
</tr>
`;

exports[`FullBlockRow render when showRicardian is true renders the raw contents of the block 1`] = `
<tr
  onClick={[MockFunction]}
>
  <td
    colSpan={3}
  >
    <RicardianBlockView
      block={
        Object {
          "id": "asdfasdf",
          "timestamp": "2020-02-08T20:20:20Z",
          "transactions": Array [],
        }
      }
    />
  </td>
</tr>
`;
